small commit to fix navbar too close

--- a/client/public/assets/CSS/main.css
+++ b/client/public/assets/CSS/main.css
@@ -14,6 +14,9 @@ body {
         line-height: 60px;
         background-color: #f5f5f5;
     }
+#navbarLink {
+    margin: 10px;
+}
 
 #gameCard{
     width: 18rem;
